--- a/content/payments/upi-deeplinks/refunds.mdx
+++ b/content/payments/upi-deeplinks/refunds.mdx
@@ -342,16 +342,17 @@ Check status of refunds created against a particular `batchID`.
 
 `Initiated`: This is when the refund request has been intimated to the banking partner and begins processing the refund. This is the terminal status of a refund, as NPCI does not share information about when a refund hits the customer’s bank account.
 
-`Pending`: This status is implied in case the refunds have not been processed due to a low balance or the merchant not transacting for a while. There are 2 reasons to elaborate on this status:
+`Pending`: This status is implied in case the refunds are awaiting to be reconciled or have completed reconciliation, yet not processed due to one of the following reasons:
 
  - Insufficient funds: Refunds requested by a merchant are adjusted from the settlement amount to the merchant's account. But if the amount for a particular refund request cannot be adjusted due to insufficient settlement amount, the refund remains in a `Pending` state.
 
-   **Example**: If the total settlement amount for the day for Merchant X is ₹850 and the merchant has created 10 refunds totalling ₹1000 in the same duration, only the first 8 will get refunded and move to an initiated state. The callback notification sent to the merchant will contain the first 8 refunds in the `initiated` block and the remaining in the `pending` block.
+   **Example**: If the total settlement amount for the day for Merchant X is ₹850 and the merchant has created 10 refunds of ₹100 each totalling ₹1000 in the same duration, only the first 8 will get refunded and move to an initiated state. The callback notification sent to the merchant will contain the first 8 refunds in the `initiated` block and the remaining in the `pending` block.
 
  - No Active Transactions: A requested refund will remain in a `Pending` state if there are no active transactions (and thus settlements to the merchant's account) from which the refund amount can be deducted and sent back to the customer.
 
    **Example**: Merchant Y has not transacted for 1 or more days and has created Refund requests. Since there are no active transactions, the refunds would remain in Pending status with the reason No Active Transactions
 
+`Rejected`: This status is used only in the exceptional scenario where a merchant wants a previously requested refund not to be processed and requests the Setu team to reject the request. This request is currently to be raised offline.
 <hr class="tertiary" />
 
 #### Check individual refund status API
