--- a/content/data/esign/error-codes.mdx
+++ b/content/data/esign/error-codes.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Error Codes
+sidebar_title: Error codes
 page_title: Aadhaar eSign error codes
 order: 5
 visible_in_sidebar: true
@@ -12,8 +12,8 @@ Below is a table which contains the error codes and corresponding error messages
 <table>
     <tbody>
         <tr>
-            <th> Error Code </th>
-            <th> Error Message </th>
+            <th> Error code </th>
+            <th> Error message </th>
         </tr>
         <tr>
             <td> session_expired </td>
