--- a/content/data/esign/notifications.mdx
+++ b/content/data/esign/notifications.mdx
@@ -12,7 +12,7 @@ Below is the summary of the notifications which need to be processed on your ser
 These notifications are sent by Setu when the end user completes the eSign flow and we receive a callback from our ESP regarding the status of the signature request.
 
 <Callout type="tip">
-    Please send back HTTP 200 status code if the request sent was processed
+    Please send back an HTTP 200 status code if the request sent was processed
     correctly to avoid receiving multiple notifications for the same eSign
     event. Response body is ignored.
 </Callout>
