Added pennydrop error case

--- a/content/data/bav/penny-drop/api-integration/sync.mdx
+++ b/content/data/bav/penny-drop/api-integration/sync.mdx
@@ -113,6 +113,36 @@ While testing on Sandbox, you may use the following sample values—
             </>
           ),
         },
+         {
+          key: "3",
+          label: "500",
+          content: (
+            <>
+              <p>
+                <Badge type="failure">INTERNAL SERVER ERROR</Badge> Internal service error or upstream service failure while processing request
+              </p>
+              <hr className="tertiary" />
+              <h5>Request</h5>
+              <CodeBlockWithCopy language="json">
+                {`POST  /api/verify/ban 
+ 
+{ 
+  "ifsc": "CNRB0008517",  
+  "accountNumber": "8517129000031" 
+} `}
+              </CodeBlockWithCopy>
+              <hr className="tertiary" />
+              <h5>Response</h5>
+              <CodeBlockWithCopy language="json">
+                {`{
+    "code": "internal_server_error", // or upstream_service_error
+    "detail": "Internal Server Error. Please reach out to support along with the traceId.",
+    "traceId": "..."
+} `}
+              </CodeBlockWithCopy>
+            </>
+          ),
+        },
       ]}
     ></Tabs>
   </Portion>
