--- a/content/data/bank-statement-analyser/overview.mdx
+++ b/content/data/bank-statement-analyser/overview.mdx
@@ -26,10 +26,21 @@ The analyser modules use statements uploaded via the Account Aggregator flow. Th
 
 4. 50+ indicators for all round financial health: Income analysis, expenditure analysis and categorization engines that allow to create a complete picture of an individual’s financial health
 
+### How does it work?
+
+![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-how-it-works-1/setu-bsa-how-it-works-1.png)
+
+First, the FIP sends the bank statement data to the FIU via the AA gateway. But before this raw data goes to the FIU, it is routed via the Setu Bank Statement Analyser layer.
+
+Here, the raw data goes through a categorization model built by Setu, and gets bucketed into various categories of incomes, expenses etc.
+
+Once the categorization is done, the insights are sent back to the FIU in the output the FIU chooses (JSON, XLS, etc.)
+
 <NextPage
     info={{
-        description: "API reference of Bank Statement Analyser",
-        slug: "/data/bank-statement-analyser/api-reference",
-        title: "API reference",
+        title: "Quickstart",
+        description:
+            "Get started with Setu BSA integration with Quickstart Guide",
+        slug: "/data/bank-statement-analyser/quickstart",
     }}
 />
