Remove examples and add proper query parameters description as well.

--- a/content/payments/billpay/api-integration/error-codes.mdx
+++ b/content/payments/billpay/api-integration/error-codes.mdx
@@ -5,7 +5,7 @@ order: 1
 visible_in_sidebar: true
 ---
 
-All the error codes appearn in an error struct.
+All the error codes appear in an error struct.
 
 ```ts
 interface Error {
