--- a/content/payments/billpay/api-integration/practices.mdx
+++ b/content/payments/billpay/api-integration/practices.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 We recommend using webhooks instead of polling the `/response` API. For the first 3 minutes right after initiation of the transaction, looking out for the webhook notifications is recommended.
 
-Ideally a transaction has a duration of 180 seconds for completion so the status will be notified via webhooks within 180 seconds. Even for pending transactions, the response will be posted via webhook as soon as the status changes. Post that polling `/response` API once in 15 mins can be tried. But we strongly recommended looking out for the webhook notifications.
+Ideally a transaction has a duration of 180 seconds for completion so the status will be notified via webhooks within 180 seconds. Even for pending transactions, the response will be posted via webhook as soon as the status changes. Post that polling `/response` API once in 15 minutes can be tried. But we strongly recommended looking out for the webhook notifications.
 
 
 ### Polling multiple transactions
@@ -33,12 +33,12 @@ Currently we don't allow retrying payment requests that fail due to error types 
 3. Initiate Bill Payment Request using reference ID `A`.
 4. Get Bill Payment Response using reference ID `A`.
 
-| Entity              | Request                      | Response                                          |
-|---------------------|------------------------------|---------------------------------------------------  |
-| BillFetchRequest    | `{"billParameters": {}}`     | `{"refId": "A"}`                                  |
-| BillFetchResponse   | `{"refId": "A"}`             | `{"billData": {}}`                                |
-| BillPaymentRequest  | `{"refId": "A", "payment":{}}` | `{"refId": "A"}`                                  |
-| BillPaymentResponse | `{"refId": "A"}`             | `{"transactionId":{}, "status": "Success/Failure"}` |
+| Entity              | Request                        | Response                                            |
+|---------------------|--------------------------------|-----------------------------------------------------|
+| BillFetchRequest    | `{"billParameters": {}}`       | `{"refId": "A"}`                                    |
+| BillFetchResponse   | `{"refId": "A"}`               | `{"billData": {}}`                                  |
+| BillPaymentRequest  | `{"refId": "A", "payment":{}}` | `{"refId": "A"}`                                    |
+| BillPaymentResponse | `{"refId": "A"}`               | `{"transactionId":{}, "status": "Success/Failure"}` |
 
 
 
@@ -52,14 +52,14 @@ Currently we don't allow retrying payment requests that fail due to error types 
 5. Initiate a new Bill Payment Request using reference ID `A` and receive reference ID `B`.
 6. Get Bill Payment Response using reference ID `B`.
 
-| Entity              | Request                      | Response                                                                    |
-|---------------------|------------------------------|-----------------------------------------------------------------------------  |
-| BillFetchRequest    | `{"billParameters": {}}`     | `{"refId": "A"}`                                                            |
-| BillFetchResponse   | `{"refId": "A"}`             | `{"billData": {}}`                                                          |
-| BillPaymentRequest  | `{"refId": "A", "payment":{}}` | `{"refId": "A"}`                                                            |
-| BillPaymentResponse | `{"refId": "A"}`             | `{"refId": A", "transactionId":{}, "status": "Failure", "errorType": "BBPS"}` |
-| BillPaymentRequest  | `{"refId": "A", "payment":{}}` | `{"refId": "B"}`                                                            |
-| BillPaymentResponse | `{"refId": "B"}`             | `{"refId": "B", "transactionId":{}, "status": "Success"}`                   |
+| Entity              | Request                        | Response                                                                      |
+|---------------------|--------------------------------|-------------------------------------------------------------------------------|
+| BillFetchRequest    | `{"billParameters": {}}`       | `{"refId": "A"}`                                                              |
+| BillFetchResponse   | `{"refId": "A"}`               | `{"billData": {}}`                                                            |
+| BillPaymentRequest  | `{"refId": "A", "payment":{}}` | `{"refId": "A"}`                                                              |
+| BillPaymentResponse | `{"refId": "A"}`               | `{"refId": A", "transactionId":{}, "status": "Failure", "errorType": "BBPS"}` |
+| BillPaymentRequest  | `{"refId": "A", "payment":{}}` | `{"refId": "B"}`                                                              |
+| BillPaymentResponse | `{"refId": "B"}`               | `{"refId": "B", "transactionId":{}, "status": "Success"}`                     |
 
 
 #### Example
