--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_title: Objects
 page_title: BBPS COU — API integration
-order: 1
+order: 4
 visible_in_sidebar: true
 ---
 
@@ -442,7 +442,7 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | additionalInfo | `{"name":"value"}[]`                | Additional information of the bill sent by the biller   |
 | billerRefId    | `string`                            | Biller reference ID used by the biller for the request. |
 | exactness      | [Exactness](#exactness)             | Biller Exactness                                        |
-| paymentLimits  | [Payment Limit](#payment-limit)`[]` | Payment limits???                                       |
+| paymentLimits  | [Payment Limit](#payment-limit)`[]` | Payment limits                                          |
 | autoFetchHash  | `string`                            | Auto fetch identifier for the bill.                     |
 
 
