--- a/content/payments/billpay/api-integration/practices.mdx
+++ b/content/payments/billpay/api-integration/practices.mdx
@@ -1,11 +1,11 @@
 ---
 sidebar_title: Best Practices
 page_title: BBPS COU — API integration
-order: 1
+order: 5
 visible_in_sidebar: true
 ---
 
-## Polling interval (or Getting to know the status of the transaction????)
+## Polling interval
 
 We recommend using webhooks instead of polling the `/response` API. For the first 3 minutes right after initiation of the transaction, looking out for the webhook notifications is recommended.
 
