--- a/content/data/esign/notifications.mdx
+++ b/content/data/esign/notifications.mdx
@@ -9,6 +9,7 @@ visible_in_sidebar: true
 ## Notifications
 
 Below is the summary of the notifications which need to be processed on your server by exposing an endpoint for Setu to send an HTTP POST request. 
+
 These notifications are sent by Setu when the end user completes the eSign flow and we receive a callback from our ESP regarding the status of the signature request.
 
 <Callout type="tip">
@@ -19,7 +20,12 @@ These notifications are sent by Setu when the end user completes the eSign flow 
 <br />
 
 The `base_url` is the server URL you share with us to receive notifications.
-To get started quickly, you can setup a mock API endpoint using <a href="https://beeceptor.com/" target="_blank">Beeceptor</a>. Once configured, Setu will send notifications to that URL. This will help you understand the notification flow before you start to implement it on your server.
+
+To get started quickly, you can setup a mock API endpoint using <a href="https://beeceptor.com/" target="_blank">Beeceptor</a>. Once configured, Setu will send notifications to that URL. 
+
+This will help you understand the notification flow before you start to implement it on your server.
+
+### Notification Samples
 
 Here’s a sample of a successful document signing by a signer, with the corresponding signature request `id` as well as the signing status for all signers associated with a signature request.
 
@@ -63,6 +69,8 @@ Here’s a sample of a successful document signing by a signer, with the corresp
   `}
 </CodeBlockWithCopy>
 
+<hr class="tertiary" />
+
 Here is a sample notification of a failed eSign attempt by a signer, for a given signature request `id`, as well as the error code for the failure.
 
 <CodeBlockWithCopy language="json">
@@ -104,6 +112,8 @@ Here is a sample notification of a failed eSign attempt by a signer, for a given
   }
   `}
 </CodeBlockWithCopy>
+
+<hr class="tertiary" />
 
 Here is a sample notification of an eSign request that's been completely signed by all signers, for a given signature request `id`.
 
