--- a/content/data/esign/error-codes.mdx
+++ b/content/data/esign/error-codes.mdx
@@ -16,51 +16,51 @@ Below is a table which contains the error codes and corresponding error messages
             <th> Error message </th>
         </tr>
         <tr>
-            <td> session_expired </td>
+            <td><code>session_expired</code></td>
             <td> The session has expired. Please try again. </td>
         </tr>
         <tr>
-            <td> document_already_signed </td>
+            <td><code>document_already_signed</code></td>
             <td> The document has already been signed successfully. </td>
         </tr>
         <tr>
-            <td> document_not_found </td>
+            <td><code>document_not_found</code></td>
             <td> This document is not available anymore. </td>
         </tr>
         <tr>
-            <td> signature_creation_failure </td>
+            <td><code>signature_creation_failure</code></td>
             <td> Failed to generate signature. </td>
         </tr>
         <tr>
-            <td> exceeded_otp_retries </td>
+            <td><code>exceeded_otp_retries</code></td>
             <td> Exceeded OTP failure attempts. </td>
         </tr>
         <tr>
-            <td> otp_not_entered </td>
+            <td><code>otp_not_entered</code></td>
             <td> OTP was not entered. </td>
         </tr>
         <tr>
-            <td> signer_declined </td>
+            <td><code>signer_declined</code></td>
             <td> Document signing was declined. </td>
         </tr>
         <tr>
-            <td> otp_expired </td>
+            <td><code>otp_expired</code></td>
             <td> OTP expired. </td>
         </tr>
         <tr>
-            <td> aadhaar_not_linked </td>
+            <td><code>aadhaar_not_linked</code></td>
             <td> Aadhaar not linked with mobile. </td>
         </tr>
         <tr>
-            <td> service_down </td>
+            <td><code>service_down</code></td>
             <td> ESP service down. </td>
         </tr>
         <tr>
-            <td> name_match_error </td>
+            <td><code>name_match_error</code></td>
             <td> Your name does not match with the data received from Aadhaar. </td>
         </tr>
         <tr>
-            <td> yob_match_error </td>
+            <td><code>yob_match_error</code></td>
             <td> Your year of birth does not match with the data received from Aadhaar. </td>
         </tr>
     </tbody>
