Update order in eSign

--- a/content/data/esign/error-codes.mdx
+++ b/content/data/esign/error-codes.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_title: Error codes
 page_title: Aadhaar eSign error codes
-order: 5
+order: 4
 visible_in_sidebar: true
 ---
 
@@ -16,52 +16,82 @@ Below is a table which contains the error codes and corresponding error messages
             <th> Error message </th>
         </tr>
         <tr>
-            <td><code>session_expired</code></td>
+            <td>
+                <code>session_expired</code>
+            </td>
             <td> The session has expired. Please try again. </td>
         </tr>
         <tr>
-            <td><code>document_already_signed</code></td>
+            <td>
+                <code>document_already_signed</code>
+            </td>
             <td> The document has already been signed successfully. </td>
         </tr>
         <tr>
-            <td><code>document_not_found</code></td>
+            <td>
+                <code>document_not_found</code>
+            </td>
             <td> This document is not available anymore. </td>
         </tr>
         <tr>
-            <td><code>signature_creation_failure</code></td>
+            <td>
+                <code>signature_creation_failure</code>
+            </td>
             <td> Failed to generate signature. </td>
         </tr>
         <tr>
-            <td><code>exceeded_otp_retries</code></td>
+            <td>
+                <code>exceeded_otp_retries</code>
+            </td>
             <td> Exceeded OTP failure attempts. </td>
         </tr>
         <tr>
-            <td><code>otp_not_entered</code></td>
+            <td>
+                <code>otp_not_entered</code>
+            </td>
             <td> OTP was not entered. </td>
         </tr>
         <tr>
-            <td><code>signer_declined</code></td>
+            <td>
+                <code>signer_declined</code>
+            </td>
             <td> Document signing was declined. </td>
         </tr>
         <tr>
-            <td><code>otp_expired</code></td>
+            <td>
+                <code>otp_expired</code>
+            </td>
             <td> OTP expired. </td>
         </tr>
         <tr>
-            <td><code>aadhaar_not_linked</code></td>
+            <td>
+                <code>aadhaar_not_linked</code>
+            </td>
             <td> Aadhaar not linked with mobile. </td>
         </tr>
         <tr>
-            <td><code>service_down</code></td>
+            <td>
+                <code>service_down</code>
+            </td>
             <td> ESP service down. </td>
         </tr>
         <tr>
-            <td><code>name_match_error</code></td>
-            <td> Your name does not match with the data received from Aadhaar. </td>
+            <td>
+                <code>name_match_error</code>
+            </td>
+            <td>
+                {" "}
+                Your name does not match with the data received from Aadhaar.{" "}
+            </td>
         </tr>
         <tr>
-            <td><code>yob_match_error</code></td>
-            <td> Your year of birth does not match with the data received from Aadhaar. </td>
+            <td>
+                <code>yob_match_error</code>
+            </td>
+            <td>
+                {" "}
+                Your year of birth does not match with the data received from Aadhaar.{" "}
+            </td>
         </tr>
     </tbody>
 </table>
