Validate VPA: Sample bank details updated

--- a/content/data/bav/validate-vpa/quickstart.mdx
+++ b/content/data/bav/validate-vpa/quickstart.mdx
@@ -85,7 +85,7 @@ Here are the URLs you would need for this integration—
     "status": "SUCCESS",
     "data": {
         "vpa": "user1@icici",
-        "bankAccountName": "PAYUSUB123",
+        "bankAccountName": "ABC Pvt Ltd",
         "bankAccountIfsc": "UTIB0002083",
         "entityType": "MERCHANT", // or INDIVIDUAL
         "ifscCrossCheck": true,
