--- a/content/data/bav/reverse-penny-drop/quickstart.mdx
+++ b/content/data/bav/reverse-penny-drop/quickstart.mdx
@@ -27,11 +27,14 @@ Contact Setu on <a href="">onboarding@setu.co</a> to get `x-client-id` and `x-cl
 
 ### Step 3 — Test on sandbox
 
+Setu’s API solution can be used to verify a user’s bank account real-time, with your own screens on your app or website. With this, you will get a shareable UPI deep link and a link to a QR code. Once invoked, it allows your customer to make a &#8377;1 payment, and provides you with a response in a webhook or when you poll our `GET` details API. The following section describes the APIs required for enabling this flow.
+
 Please use this <a href="https://www.postman.com/setu-devs/workspace/data-gateway-public/folder/16116908-3c3a4e40-06ad-4c56-bdf4-be2f8e74296a" target="_blank">postman collection</a> to test <strong>Reverse Penny Drop</strong>.
 
 ##### API integration
 
 Look at the <a href="/data/bav/reverse-penny-drop/api-integration" target="_blank">API integration</a> to proceed.
+
 
 <hr class="primary" />
 
@@ -44,8 +47,8 @@ Setu will store account details of the user to handle failed auto-refunds. For f
 In case an issue arises and you need to contact our support team, please provide the corresponding `upi_bill_id` so that we can quickly resolve it.
 
 <Callout type="tip">
-    Notify the user that the amount will be refunded back to their account
-    within 24-48 hours.
+  Notify the user that the amount will be refunded back to their account within
+  24-48 hours.
 </Callout>
 
 <br />
