--- a/content/data/bav/reverse-penny-drop/quickstart.mdx
+++ b/content/data/bav/reverse-penny-drop/quickstart.mdx
@@ -38,7 +38,7 @@ Look at the <a href="/data/bav/reverse-penny-drop/api-integration" target="_blan
 
 <hr class="primary" />
 
-##### Refunds
+#### Refunds
 
 Setu will refund any successful payment done by a user, after we receive a credit response from our bank partner. This takes between 24 to 48 hours and refunds are handled in batches.
 
