--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -411,7 +411,7 @@ This is an optional API. This API lets you know the bank verification status.
 <Callout type="tip">
   Note: It should not be used for polling but only for specific use cases. For
   example: if you're not receiving successful webhook for a customer and want to
-  know if the customer has made the Rs1 payment for bank verification or not.
+  know if the customer has made the INR 1 payment for bank verification or not.
 </Callout>
 
 <Row>
