--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_title: Objects
-page_title: BBPS COU — API integration
-order: 4
+page_title: BBPS COU — Objects
+order: 3
 visible_in_sidebar: true
 ---
 
