--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -51,6 +51,7 @@ If successful, you will get a JSON response. Two of the fields in the response w
 - `shortUrl`, a link starting with `https://` and an image with a QR code
 
 We recommend showing the QR code on desktop devices so that a user can use their phone to scan QR and pay. For mobile phones, it's recommended to use the UPI intent link to pay on the same device.
+- If you want PSP specific link. Read the <a target="_blank" href="/data/bav/reverse-penny-drop/quickstart#faqs">FAQ</a>.
 
 <Callout type="tip">
   Notify your user, that they should pay from the account they want to use on
