--- a/content/data/bav/reverse-penny-drop/quickstart.mdx
+++ b/content/data/bav/reverse-penny-drop/quickstart.mdx
@@ -55,7 +55,45 @@ In case an issue arises and you need to contact our support team, please provide
 
 <hr class="primary" />
 
-##### FAQs
+#### FAQs
+
+**How to create PSP specific UPI deeplink?**
+
+UPI Deeplink from the response can be consumed to create PSP app specific links. These links directly take user to specific PSP applications when clicked. 
+
+Example of a UPI deeplink is `upi://pay?pa=rpd@kaypay&...`. Modify the deeplinks as below -
+
+<table>
+  <tr>
+    <th>PSP App Name</th>
+    <th>Replacement</th>
+    <th>Example</th>
+  </tr>
+  <tr>
+    <td>GPay</td>
+    <td>Replace <code>upi://pay</code> with <code>tez://upi/pay</code></td>
+    <td>
+      <code>tez://upi/pay?pa=rpd@kaypay&...</code>
+    </td>
+  </tr>
+  <tr>
+    <td>PhonePe</td>
+    <td>Replace <code>upi://pay</code> with <code>phonepe://pay</code></td>
+    <td>
+      <code>phonepe://pay?pa=rpd@kaypay&...</code>
+    </td>
+  </tr>
+  <tr>
+    <td>PayTM</td>
+    <td>Replace <code>upi://pay</code> with <code>paytmmp://pay</code></td>
+    <td>
+      <code>paytmmp://pay?pa=rpd@kaypay&...</code>
+    </td>
+  </tr>
+</table>
+
+
+<br/>
 
 **Are `CNRB0000000` and `CNRB0000033` valid IFSCs?**
 
