--- a/content/data/bav/reverse-penny-drop/quickstart.mdx
+++ b/content/data/bav/reverse-penny-drop/quickstart.mdx
@@ -57,7 +57,7 @@ In case an issue arises and you need to contact our support team, please provide
 
 #### FAQs
 
-**How to create PSP specific UPI deeplink?**
+**1. How to create PSP specific UPI deeplink?**
 
 UPI Deeplink from the response can be consumed to create PSP app specific links. These links directly take user to specific PSP applications when clicked. 
 
@@ -71,9 +71,9 @@ Example of a UPI deeplink is `upi://pay?pa=rpd@kaypay&...`. Modify the deeplinks
   </tr>
   <tr>
     <td>GPay</td>
-    <td>Replace <code>upi://pay</code> with <code>tez://upi/pay</code></td>
+    <td>Replace <code>upi://pay</code> with <code>gpay://upi/pay</code></td>
     <td>
-      <code>tez://upi/pay?pa=rpd@kaypay&...</code>
+      <code>gpay://upi/pay?pa=rpd@kaypay&...</code>
     </td>
   </tr>
   <tr>
@@ -94,8 +94,9 @@ Example of a UPI deeplink is `upi://pay?pa=rpd@kaypay&...`. Modify the deeplinks
 
 
 <br/>
+<br/>
 
-**Are `CNRB0000000` and `CNRB0000033` valid IFSCs?**
+**2. Are `CNRB0000000` and `CNRB0000033` valid IFSCs?**
 
 All Canara bank accounts seems to have only two IFSC codes configured with NPCI. Some interesting observations:
 
