fixed all error blocks

--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -145,7 +145,7 @@ We recommend showing the QR code on desktop devices so that a user can use their
     "additionalData": { 
         "key1":  {
             "nested_key1": "nested_value1"
-        },
+        }
     }
 }
  `}
@@ -154,10 +154,12 @@ We recommend showing the QR code on desktop devices so that a user can use their
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
-    "code": "bad_request",
-    "detail": "Please refer to our docs to send an appropriate request",
-    "traceId": "..."
-} `}
+    "error": {
+        "code": "bad_request",
+        "detail": "Please refer to our docs to send an appropriate request",
+        "traceId": "..."
+    }
+}`}
               </CodeBlockWithCopy>
             </>
           ),
@@ -189,9 +191,11 @@ We recommend showing the QR code on desktop devices so that a user can use their
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
-    "code": "internal_server_error", // or upstream_service_error
-    "detail": "Internal Server Error. Please reach out to support along with the traceId.",
-    "traceId": "..."
+  "error": {
+      "code": "internal_server_error", // or upstream_service_error
+      "detail": "Internal Server Error. Please reach out to support along with the traceId.",
+      "traceId": "..."
+    }
 } `}
               </CodeBlockWithCopy>
             </>
@@ -262,9 +266,11 @@ This API lets you test the end to end flow without an actual payment. This will 
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
-    "code": "internal_server_error", // or upstream_service_error
-    "detail": "Internal Server Error. Please reach out to support along with the traceId.",
-    "traceId": "..."
+  "error": {
+      "code": "internal_server_error", // or upstream_service_error
+      "detail": "Internal Server Error. Please reach out to support along with the traceId.",
+      "traceId": "..."
+    }
 } `}
               </CodeBlockWithCopy>
             </>
@@ -496,9 +502,11 @@ This is an optional API. This API lets you know the bank verification status.
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
+  "error": {
     "code": "request_not_found",
     "detail": "Unable to find the BAV reverse penny drop request.",
     "traceId": "..."
+  }
 } `}
               </CodeBlockWithCopy>
             </>
@@ -523,9 +531,11 @@ This is an optional API. This API lets you know the bank verification status.
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
-    "code": "internal_server_error", // or upstream_service_error
-    "detail": "Internal Server Error. Please reach out to support along with the traceId.",
-    "traceId": "..."
+  "error": {
+      "code": "internal_server_error", // or upstream_service_error
+      "detail": "Internal Server Error. Please reach out to support along with the traceId.",
+      "traceId": "..."
+    }
 } `}
               </CodeBlockWithCopy>
             </>
