--- a/content/data/bank-statement-analyser/postman.mdx
+++ b/content/data/bank-statement-analyser/postman.mdx
@@ -11,21 +11,21 @@ visible_in_sidebar: true
 
 Download and setup the <a href="https://www.postman.com/downloads" target="_blank">Postman App</a>, if you haven’t already. All APIs required for using BSA have been published in this <a href="https://documenter.getpostman.com/view/15939114/2s93Jrw4mm" target="_blank">collection</a>. Click on **Run in Postman** button on the top right corner to import BSA’s API collection to Postman.
 
-**Update collection variables**
+**Update environment variables**
 
 <Callout type="tip">
-    To edit collection variables in Postman, click on the collection and go to{" "}
-    <strong>Variables</strong>.
+    To edit environment variables in Postman, click on the Environments and go
+    to <strong>bsa</strong>.
 </Callout>
 
 <br />
 
-Postman collection comes wth default test credentials. Set the following variable in the collection on Postman—
+Postman environment comes wth default test credentials. Set the following variables in the environment on Postman—
 
 -   Set `client_id` to the FIU app client ID received on Bridge.
 -   Set `client_secret` to the FIU app client secret received on Bridge.
 
-![](https://storage.googleapis.com/strapi-assets/latest/Screenshot_2022-02-21_at_12.55.07_PM/Screenshot_2022-02-21_at_12.55.07_PM.png)
+![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-variables-1/setu-bsa-variables-1.png)
 
 <Callout type="warning">
     Remove any new lines at the end after pasting values, to avoid errors.
