--- a/content/data/bank-statement-analyser/quickstart.mdx
+++ b/content/data/bank-statement-analyser/quickstart.mdx
@@ -7,13 +7,47 @@ visible_in_sidebar: true
 
 ## Quickstart Guide
 
-WIP
+Here is a quick summary of steps to help you integrate with Setu’s BSA.
+
+<hr className="primary" />
+
+### Step 1 - Report creation
+
+FIU needs to provide Setu with the following items for configuration
+
+-   **FIU ID** received from the integration with AA
+-   **Name** for the report, and a list of required <a href="/data/bank-statement-analyser/postman" target="_blank">**Insights**</a>
+-   **Format** of the report's output (currently defaults to `JSON`)
+
+Please send these details via email to [bsa@setu.co](mailto:bsa@setu.co)
+
+Setu will create a report for the FIU and share a `Report ID`, which can be used when [generating insights](#step-3-generate-insights)
+
+### Step 2 - AA Gateway integration
+
+#### Create FI-Datablocks
+
+Create an FI Datablock in Setu BSA by making a POST call to `/v1/fi_data` with the data fetched from the FIP
+
+-   The payload should be the same data fetched from the FIP, and its schema is validated against the [ReBIT schema](https://api.rebit.org.in/schema)
+-   The API returns a `Data ID` for the datablock along with some metadata, which can be used when [generating insights](#step-3-generate-insights)
+-   A list of available data blocks can also be obtained by making a GET call to `/v1/fi_data`
+
+<Callout type="tip">
+    FI Datablocks will be auto-fetched from the FIP in future.
+</Callout>
+
+### Step 3 - Generate Insights
+
+-   Generate Insights by making an API call to `/v1/insight`, with the report ID, and a list of data IDs in the payload
+-   The API will post a asynchronous job and return a Job ID, which can later be used to obtain the insights
+-   Setu will post a <a href="/data/account-aggregator/api-integration/notifications" target="_blank">notification</a> to the **notification endpoint** <a href="/data/account-aggregator/quickstart#integrating-fiu-apis-on-sandbox" target="_blank">configured for the FIU app</a>, along with the generation insights
 
 <hr className="primary" />
 
 ## Test on Postman or integrate APIs
 
-If you are just starting integration, we recommend that you familiarise yourself with all Insights APIs through Postman. If you have already finished this, you can integrate with Insights APIs directly.
+If you are just starting integration, we recommend that you familiarise yourself with setting up Postman and configuring **credentials**. If you have already finished this, you can integrate with Insights APIs directly.
 
 <Row>
     <Portion desktopSpan="half">
@@ -21,17 +55,6 @@ If you are just starting integration, we recommend that you familiarise yourself
             <p>ON POSTMAN</p>
             <a href="/data/bank-statement-analyser/postman" target="_blank">
                 Set up Postman environment ->
-            </a>
-        </Card>
-    </Portion>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <p>FOR API INTEGRATION</p>
-            <a
-                href="/data/bank-statement-analyser/api-integration"
-                target="_blank"
-            >
-                Start API integration ->
             </a>
         </Card>
     </Portion>
