--- a/content/data/account-aggregator/api-integration/notifications.mdx
+++ b/content/data/account-aggregator/api-integration/notifications.mdx
@@ -69,7 +69,7 @@ The FI notification payload contains two status
 -   `PENDING`- FI data session is active
 -   `COMPLETED`- All requested FIP(s) have status as `READY`
 -   `EXPIRED`- Data session had expired and no data fetch can happen for the dataSessionId
--   `PARTIAL` - Some FIPs are ready with the data while a few others have failed. Ready data can still be fetched. <RecentlyAdded />
+-   `PARTIAL` - Some FIPs are ready with the data while a few others have failed. Ready data can still be fetched. <ReadMore />
 -   `FAILED`- Data Session request failed, retry creating a new session
 
 **FIStatus** - return status of the FIP(s) linked to the data session
