--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -45,9 +45,9 @@ E.g:
 </CodeBlockWithCopy>
 
 <Callout type="warning">
-    You can expect this `additionalData` as part of a JSON body when we will
-    notify you bank account verification details over webhook, or when you use
-    our <code>GET</code> details API.
+  You can expect this `additionalData` as part of a JSON body when we notify you
+  with bank account verification details over webhook, or when you use our{" "}
+  <code>GET</code> details API.
 </Callout>
 <br />
 
