fetch FI data description fix

--- a/content/data/account-aggregator/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/api-integration/data-apis.mdx
@@ -85,7 +85,12 @@ If you request for multiple FI types, you will receive all the FI data from end-
 
 ##### Response
 
-The response comes with status: `COMPLETED` which signifies that FI data fetch is completed for the requested session. The payload contains Profile, Summary and Transactions as requested in Create consent request.
+The response comes with status: 
+- `COMPLETED` which signifies that FI data fetch is completed for the requested session.
+- `PARTIAL` which signifies that some FIP FI data fetches are completed and some have failed for the requested session. 
+- `PENDING` which signifies that some FIP FI data fetches are completed and some are still pending for the requested session.
+ 
+The payload contains Profile, Summary and Transactions as requested in Create consent request.
 
 <CodeBlockWithCopy language="json">
   {`{
