Update menu items

--- a/content/data/bav/penny-drop/notifications.mdx
+++ b/content/data/bav/penny-drop/notifications.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_title: Notifications
 page_title: BAV Async Penny drop Notifications
-order: 5
+order: 3
 visible_in_sidebar: true
 ---
 
@@ -13,8 +13,8 @@ These notifications are sent by Setu when the BAV Async Penny drop request is co
 
 <Callout type="tip">
     Please send back an HTTP 200 status code if the request sent was processed
-    correctly to avoid receiving multiple notifications for the same async penny drop
-    event. Response body is ignored.
+    correctly to avoid receiving multiple notifications for the same async penny
+    drop event. Response body is ignored.
 </Callout>
 <br />
 
@@ -70,7 +70,5 @@ Here is a sample notification of a failed penny drop request, with the correspon
 }
   `}
 </CodeBlockWithCopy>
-
-
 
 <WasPageHelpful />
